--- a/index.html
+++ b/index.html
@@ -23,19 +23,8 @@ h1, h2, h3, h4, h5, h6 {
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">Sobre nós</a>
       <a href="#menu" class="w3-bar-item w3-button">Menu</a>
-<<<<<<< HEAD
-<<<<<<< HEAD
-      <a href="#contact" class="w3-bar-item w3-button">Vendas</a>
+      <a href="#vendas" class="w3-bar-item w3-button">Vendas</a>
       <a href="#contact" class="w3-bar-item w3-button">Contato</a>
-
-=======
-      <a href="#contact" class="w3-bar-item w3-button">Sales</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
->>>>>>> 9730a90 (Adicionado Menu Sales)
-=======
-      <a href="#contact" class="w3-bar-item w3-button">Vendas</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contato</a>
->>>>>>> 30b6a5d (Primeiro commit teste)
     </div>
   </div>
 </div>
