Mudando Myweb - pedidos.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <a class="navbar-brand" href="#home">
             <i class="bi bi-egg-fried me-2"></i>
-            <span class="brand-text">MYWEB BURGER</span>
+            <span class="brand-text">MYWEB BURGER - Pedidos </span>
         </a>
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
